k8s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: summit-server
spec:
  selector:
    matchLabels:
      app: summit-server
  template:
    metadata:
      labels:
        app: summit-server
    spec:
      containers:
      - name: summit-server
        image: summit/server
        ports:
        - containerPort: 4000
